Refactored: Updated implementation using Java NIO package